[package]
name = "playlists"
version = "0.1.0"
edition = "2021"

[dependencies]
audio-visualizer = "0.4.0"
csv = "1.3.1"
eframe = "0.29.1"
egui_extras = { version = "0.29.1", features = ['image'] }
image = "0.25.5"
m3u8-rs = "6.0.0"
rand = "0.8.5"
rfd = "0.15.1"
rodio = { version = "0.20.1", features = ["symphonia-all"] }
serde = { version = "1.0.215", features = ["derive"] }
